make file compiles cuda question mark

--- a/graphcals/Makefile
+++ b/graphcals/Makefile
@@ -11,11 +11,14 @@
 CC = gcc
 CXX = g++
 LINK = g++
+NVLINK = nvcc
+NVCC = nvcc
 
 # Turn on optimization and warnings (add -g for debugging with gdb):
 # CPPFLAGS = 		# preprocessor flags
 CFLAGS = -O #-Wall
 CXXFLAGS = -O #-Wall
+NVCCFLAGS = -O #-Wall
 
 # OpenGL/Mesa libraries for Linux:
 GL_LIBS = -lglut -lGLU -lGL -lm
@@ -33,15 +36,14 @@ GL_LIBS = -lglut -lGLU -lGL -lm
 # MAKE allows the use of "wildcards", to make writing compilation instructions
 # a bit easier. GNU make uses $@ for the target and $^ for the dependencies.
 
-all:    fractalviewer
+all:    fractalviewerserial fractalviewerparallel
 
 # specific targets
-fractalviewer:	fractalview.o mandelbrot.o julia.o common.o colors.o
+fractalviewerserial:	fractalview.o mandelbrot.o julia.o common.o colors.o
 	$(LINK) -o $@ $^ $(GL_LIBS)
 
-# typical target entry, builds "myprog" from file1.cpp, file2.cpp, file3.cpp
-myprog:	file1.o file2.o file3.o
-	$(LINK) -o $@ $^ $(GL_LIBS)
+fractalviewerparallel:	fractalview.o mandelbrot.o julia.o common.o colors.o
+	$(NVLINK) -o $@ $^ $(GL_LIBS)
 
 # generic C and C++ targets for OpenGL programs consisting of only one file
 # type "make filename" (no extension) to build
@@ -50,6 +52,9 @@ myprog:	file1.o file2.o file3.o
 
 .cpp:
 	$(CXX) -o $@ $@.cpp $(CXXFLAGS) $(GL_LIBS)
+
+.cu:
+	$(NVCC) -o $@ $@.cu $(NVCCFLAGS) $(GL_LIBS)
 
 # utility targets
 clean:
