--- a/graphcals/Makefile
+++ b/graphcals/Makefile
@@ -16,9 +16,9 @@ NVCC = nvcc
 
 # Turn on optimization and warnings (add -g for debugging with gdb):
 # CPPFLAGS = 		# preprocessor flags
-CFLAGS = -O #-Wall
-CXXFLAGS = -O #-Wall
-NVCCFLAGS = -O #-Wall
+CFLAGS = -O #-Wall -Wextra
+CXXFLAGS = -O #-Wall -Wextra
+NVCCFLAGS = -O #-Wall -Wextra
 
 # OpenGL/Mesa libraries for Linux:
 GL_LIBS = -lglut -lGLU -lGL -lm
@@ -42,11 +42,11 @@ all:    fractalviewerserial fractalviewerparallel
 fractalviewerserial:	fractalview.o mandelbrot.o julia.o common.o colors.o
 	$(LINK) -o $@ $^ $(GL_LIBS)
 
-fractalviewerparallel:	mandelbrotcuda.o julia.o common.o colors.o
+fractalviewerparallel: fractalview.o mandelbrotcuda.o common.o colors.o
 	$(NVLINK) -o $@ $^ $(GL_LIBS) -lcuda -lcudart
 
 mandelbrotcuda.o:
-	nvcc -c -arch=sm_20 mandelbrotcuda.cu
+	nvcc -c -arch=sm_20 mandelbrotcuda.cu -g
 
 # generic C and C++ targets for OpenGL programs consisting of only one file
 # type "make filename" (no extension) to build
